--- a/GBF/diversao.html
+++ b/GBF/diversao.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="diversao.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
+    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
 </head>
 
 <body>
@@ -47,14 +50,13 @@
         </div>
         </section>
 
-        <section class="diversao02">
+        <section class="diversao02" id="typing">
             <div class="box-01">
-                <h2>Você quer se divertir e não sabe?</h2>
-                <p>conheça lugares para
-                    se divertir em quatro rodas</p>
+                <h2 id="typed-h2"></h2>
+                <p id="typed-p"></p>
             </div>
 
-            <div class="box-01">
+            <div>
                 <img src="imagem/nfsigkirt.jpg" alt="kart">
             </div>
         </section>
@@ -74,10 +76,6 @@
                         <img src="imagem/Kangoo Park.jpg" alt="" class="img">
                     </div>
 
-                </div>
-
-                <div class="box-03">
-
                     <div class="box">
                         <img src="imagem/Zoológico e Aquário.jpg" alt="" class="img">
                     </div>
@@ -85,7 +83,9 @@
                     <div class="box">
                         <img src="imagem/parque magic city.jpg" alt="" class="img">
                     </div>
+
                 </div>
+
             </div>
         </section>
     </main>
