--- a/EJR/patinete.html
+++ b/EJR/patinete.html
@@ -97,13 +97,71 @@
 
 
     <!-- RODAPÉ  -->
-     <footer>
-        <div class="logo">
-            <img src="" alt="logo rota livre">
+    <footer>
+        <div class="content">
+            <div class="content-1">
+                <h4 class="title-footer">ROTA <span>LIVRE</span></h4>
+
+                <ul>
+                    <li>
+                        <a href="#">Sobre Nós</a>
+                    </li>
+
+                    <li>
+                        <a href="#">Menu</a>
+                    </li>
+
+                    <li>
+                        <a href="#">Politica de privacidade</a>
+                    </li>
+
+                    <li>
+                        <a href="#">Termos de Serviço</a>
+                    </li>
+                </ul>
+            </div>
+
+            <div class="content-1">
+                <h4 class="title-footer">OBTENHA <span>AJUDA</span></h4>
+                <ul>
+                    <li>
+                        <a href="#">FAQ</a>
+                    </li>
+
+                    <li>
+                        <a href="#">Devoluções</a>
+                    </li>
+
+                    <li>
+                        <a href="#">Opções de Pagamento</a>
+                    </li>
+                </ul>
+            </div>
+
+            <div class="content-1">
+                <h4 class="title-footer">SIGA <span>-NÓS</span></h4>
+
+                <div class="social-links">
+                    <a href="#"><i class="fa-brands fa-facebook"></i></a>
+                    <a href="#"><i class="fa-brands fa-instagram"></i></a>
+                    <a href="#"><i class="fa-brands fa-twitter"></i></a>
+                    <a href="#"><i class="fa-brands fa-linkedin"></i></a>
+                </div>
+            </div>
+
+
+
+
+
+
+
+
+
+
+
         </div>
 
-        <div></div>
-     </footer>
+    </footer>
 </body>
 
 </html>
