--- a/EJR/patinete.html
+++ b/EJR/patinete.html
@@ -104,7 +104,7 @@
 
                 <ul>
                     <li>
-                        <a href="#">Sobre Nós</a>
+                        <a href="#">Sobre nós</a>
                     </li>
 
                     <li>
@@ -112,7 +112,7 @@
                     </li>
 
                     <li>
-                        <a href="#">Politica de privacidade</a>
+                        <a href="#">Politica de Privacidade</a>
                     </li>
 
                     <li>
@@ -148,20 +148,14 @@
                     <a href="#"><i class="fa-brands fa-linkedin"></i></a>
                 </div>
             </div>
-
-
-
-
-
-
-
-
-
-
-
         </div>
 
+        <div class="footer-bottom">
+            <p>&copy; 2025. ROTA LIVRE Todos Direitos Reservados</p>
+        </div>
     </footer>
+
+    <script src="script.js"></script>
 </body>
 
 </html>
