--- a/Victor/bike.html
+++ b/Victor/bike.html
@@ -71,13 +71,15 @@
 
     <section class="mob-bike-2">
 
+        <h1 class="heading">Noite <span>de pedaladas</span></h1>
+
         <div class="row">
 
             <div class="img-section02">
                 <img src="img/Captura de tela 2025-06-25 203306.png" alt="">
             </div>
 
-            <div class="text-2">
+            <div class="content">
                 <h3>viva a energia das nossas pedaladas noturnas!</h3>
 
                 <p>Aqui, você encontra registros de encontros marcados por luzes coloridas, sorrisos e
