--- a/Victor/bike.html
+++ b/Victor/bike.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <!-- linha 10 e 11 link do carrossel Acima  -->
+    <script src="https://kit.fontawesome.com/21b9934e7f.js" crossorigin="anonymous"></script>
 
 </head>
 
@@ -30,6 +31,7 @@
 
                         <li><a href="EJR/patinete.html">Patinetes</a></li>
                         <li><a href="#">Skates</a></li>
+                        <li><a href="TCC_ROTA_LIVRE/index.html">HOME</a></li>
                     </ul>
                 </li>
                 <li class="submenu">
@@ -91,15 +93,69 @@
 
         </div>
 
-      
+
 
     </section>
 
     <section class="bike-eventos">
 
-        <h3>EVENTOS <span>ATUAIS</span></h3>
+        <h3>EVENTOS<span>-ATUAIS</span></h3>
 
+         <div class="bit-buttom">
+            <a href="event.html" class="btn">EVENTOS</a>
+        </div>
     </section>
+
+     <footer>
+    <div class="container">
+      <div class="content-1">
+        <h4 class="title-footer">ROTA <span>LIVRE</span></h4>
+
+        <ul>
+          <li>
+            <a href="#">Sobre nós</a>
+          </li>
+          <li>
+            <a href="#">Menu</a>
+          </li>
+          <li>
+            <a href="#">Politica privacidade</a>
+          </li>
+          <li>
+            <a href="#">Termos de serviço</a>
+          </li>
+        </ul>
+      </div>
+
+      <div class="content-1">
+        <h4 class="title-footer">OBTENHA <span>AJUDA</span></h4>
+        <ul>
+          <li>
+            <a href="#">FAQ</a>
+          </li>
+          <li>
+            <a href="#">Devoluções</a>
+          </li>
+          <li>
+            <a href="#">Opções de pagamento</a>
+          </li>
+        </ul>
+      </div>
+
+      <div class="content-1">
+        <h4 class="title-footer">Siga <span>-nos</span></h4>
+        <div class="social-links">
+          <a href="#"><i class="fa-brands fa-facebook"></i></a>
+          <a href="#"><i class="fa-brands fa-instagram"></i></a>
+          <a href="#"><i class="fa-brands fa-twitter"></i></a>
+          <a href="#"><i class="fa-brands fa-linkedin"></i></a>
+        </div>
+      </div>
+    </div>
+    <div class="footer-bottom">
+      <p>&copy; 2025. ROTA LIVRE Todos Direitos Reservado</p>
+    </div>
+  </footer>
 
     <script src="bike.js"></script>
 
