--- a/Victor/bike.html
+++ b/Victor/bike.html
@@ -25,26 +25,24 @@
     <nav id="menu">
         <div class="list-menu">
             <ul>
-                <li class="submenu">
-                    <a href="#">Modalidades <i class="fas fa-caret-down"></i></a>
-                    <ul class="dropdown">
-
-                        <li><a href="EJR/patinete.html">Patinetes</a></li>
-                        <li><a href="#">Skates</a></li>
-                        <li><a href="TCC_ROTA_LIVRE/index.html">HOME</a></li>
-                    </ul>
-                </li>
-                <li class="submenu">
-                    <a href="#">Eventos <i class="fas fa-caret-down"></i></a>
-                    <ul class="dropdown">
-                        <li><a href="GBF/diversao.html">Passeios Coletivos</a></li>
-                        <li><a href="#">Workshops</a></li>
-                        <li><a href="#">Aulas Gratuitas</a></li>
-                    </ul>
-                </li>
-                <li>
-                    <a href="sobre.html">Sobre nós</a>
-                </li>
+                <div class="list-menu">
+        <ul>
+          <li>
+            <a href="../index.html">Home</a>
+          </li>
+          <li class="submenu">
+            <a href="#">Eventos<i class="fas fa-caret-down"></i></a>
+            <ul class="dropdown">
+              <li><a href="../GBF/diversao.html">Passeios Coletivos</a></li>
+              <li><a href="event.html">Eventos</a></li>
+              <li><a href="#">Aulas Gratuitas</a></li>
+            </ul>
+          </li>
+          <li>
+            <a href="../sobre.html">Sobre nós</a>
+          </li>
+        </ul>
+      </div>
             </ul>
         </div>
     </nav>
