--- a/sobre.html
+++ b/sobre.html
@@ -79,10 +79,10 @@
 
                 <ul>
                     <li>
-                        <a href="#">Sobre nós</a>
+                        <a href="sobre.html">Sobre nós</a>
                     </li>
                     <li>
-                        <a href="#">Menu</a>
+                        <a href="index.html">Home</a>
                     </li>
                     <li>
                         <a href="#">Politica privacidade</a>
