--- a/Victor/event.html
+++ b/Victor/event.html
@@ -20,25 +20,19 @@
     <nav id="menu">
       <div class="list-menu">
         <ul>
-          <li class="submenu">
-            <a href="#">Modalidades <i class="fas fa-caret-down"></i></a>
-            <ul class="dropdown">
-              <li><a href="bike.html">Bicicletas</a></li>
-              <li><a href="EJR/patinete.html">Patinetes</a></li>
-              <li><a href="#">Skates</a></li>
-              <li><a href="TCC_ROTA_LIVRE/index.html">HOME</a></li>
-            </ul>
+          <li>
+            <a href="../index.html">Home</a>
           </li>
           <li class="submenu">
-            <a href="#">Eventos <i class="fas fa-caret-down"></i></a>
+            <a href="#">Eventos<i class="fas fa-caret-down"></i></a>
             <ul class="dropdown">
-              <li><a href="GBF/diversao.html">Passeios Coletivos</a></li>
-              <li><a href="#">Workshops</a></li>
+              <li><a href="../GBF/diversao.html">Passeios Coletivos</a></li>
+              <li><a href="event.html">Eventos</a></li>
               <li><a href="#">Aulas Gratuitas</a></li>
             </ul>
           </li>
           <li>
-            <a href="sobre.html">Sobre nós</a>
+            <a href="../sobre.html">Sobre nós</a>
           </li>
         </ul>
       </div>
