--- a/Victor/bike.html
+++ b/Victor/bike.html
@@ -31,6 +31,15 @@
             <a href="../index.html">Home</a>
           </li>
           <li class="submenu">
+            <a href="#">Modalidades <i class="fas fa-caret-down"></i></a>
+            <ul class="dropdown">
+              <li><a href="Victor/bike.html">Bicicletas</a></li>
+              <li><a href="EJR/patinete.html">Patinetes</a></li>
+              <li><a href="#">Skates</a></li>
+            </ul>
+          </li>
+          
+          <li class="submenu">
             <a href="#">Eventos<i class="fas fa-caret-down"></i></a>
             <ul class="dropdown">
               <li><a href="../GBF/diversao.html">Passeios Coletivos</a></li>
