--- a/Victor/event.html
+++ b/Victor/event.html
@@ -8,7 +8,9 @@
   <link rel="stylesheet" href="event.css">
   <link rel="stylesheet" href="bike.css">
   
-  
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
+  <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+  <!-- linha 10 e 11 link do carrossel Acima  -->
   <script src="https://kit.fontawesome.com/21b9934e7f.js" crossorigin="anonymous"></script>
 </head>
 
@@ -46,7 +48,7 @@
             </ul>
         </div>
     </nav>
-</header>
+  </header>
 
 
   <!-- Início da seção de eventos de bicicleta -->
@@ -173,7 +175,9 @@
     </div>
   </footer>
 
-  <script src="/script.js"></script>
+  <script src="event.js"></script>
+
+
 
 </body>
 
