--- a/index.html
+++ b/index.html
@@ -89,9 +89,7 @@
         <nav class="navbar">
             <!-- Criamos nossas Listas quando tiver em formato Desktop -->
             <ul class="nav-links">
-                <li>
-                    <a href="index.html">Home</a>
-                </li>
+                
                 <li class="submenu">
                     <a href="#">Modalidades <i class="fas fa-caret-down"></i></a>
                     <ul class="dropdown">
@@ -107,6 +105,9 @@
                         <li><a href="#">Eventos</a></li>
                         <li><a href="#">Workshops</a></li>
                     </ul>
+                </li>
+                <li>
+                    <a href="sobre.html">Sobre Nós</a>
                 </li>
             </ul>
             <!-- Criamos nossa caixa (DIV) para guardar os elementos do Hamburguer quando estiver aberto -->
