atualização menu - mobile
acrescentado o link pagina patinete

--- a/index.html
+++ b/index.html
@@ -121,7 +121,10 @@
                 <!-- Essa lista é do Menu Hamburguer quando estiver aberto. -->
                 <ul class="nav-links-mobile">
                     <li>
-                        <a href="./Victor/bike.html">Modalidade</a>
+                        <a href="./Victor/bike.html">Bike</a>
+                    </li>
+                    <li>
+                        <a href="./EJR/patinete.html">Patinete</a>
                     </li>
                     <li>
                         <a href="./GBF/diversao.html">Eventos</a>
