--- a/GBF/diversao.html
+++ b/GBF/diversao.html
@@ -34,21 +34,21 @@
                     <li class="submenu">
                         <a href="#">Modalidades <i class="fas fa-caret-down"></i></a>
                         <ul class="dropdown">
-                            <li><a href="Victor/bike.html">Bicicletas</a></li>
-                            <li><a href="EJR/patinete.html">Patinetes</a></li>
+                            <li><a href="../Victor/bike.html">Bicicletas</a></li>
+                            <li><a href="../EJR/patinete.html">Patinetes</a></li>
                             <li><a href="#">Skates</a></li>
                         </ul>
                     </li>
                     <li class="submenu">
                         <a href="#">Eventos <i class="fas fa-caret-down"></i></a>
                         <ul class="dropdown">
-                            <li><a href="GBF/diversao.html">Passeios Coletivos</a></li>
-                            <li><a href="#">Workshops</a></li>
+                            <li><a href="diversao.html">Passeios Coletivos</a></li>
+                            <li><a href="../Victor/event.html">Eventos</a></li>
                             <li><a href="#">Aulas Gratuitas</a></li>
                         </ul>
                     </li>
                     <li>
-                        <a href="sobre.html">Sobre nós</a>
+                        <a href="../sobre.html">Sobre nós</a>
                     </li>
                 </ul>
             </div>
